@@ -1,5 +1,5 @@
 name    = Config-Model-TkUI
-version = 1.317
+version = 1.318
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
@@ -8,6 +8,7 @@ copyright_year = 2010
 [Prereqs / RuntimeRequires]
 Config::Model    = 1.212
 Exception::Class = 0
+File::Slurp      = 0
 Tk               = 0
 Tk::DirSelect    = 0
 Tk::Tree         = 0
